--- a/index.html
+++ b/index.html
@@ -1,51 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Template</title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Bootstrap Template</title>
 
-    <!-- Bootstrap -->
-    <link href="libs/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/common.css" rel="stylesheet">
-    <link href="css/index.css" rel="stylesheet">
+	<!-- Bootstrap -->
+	<link href="libs/css/bootstrap.min.css" rel="stylesheet">
+	<link href="css/common.css" rel="stylesheet">
+	<link href="css/index.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="libs/js/html5shiv.min.js"></script>
-      <script src="libs/js/respond.min.js"></script>
-    <![endif]-->
-  </head>
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+	<script src="libs/js/html5shiv.min.js"></script>
+	<script src="libs/js/respond.min.js"></script>
+	<![endif]-->
+</head>
 
-  <body class="index-page">
-    <nav class="navbar navbar-default navbar-fixed-top navbar-sticky" id="nav-home" role="navigation">
-      <div class="container">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">雪景</a>
-        </div>
+<body class="index-page">
+<nav class="navbar navbar-default navbar-fixed-top navbar-sticky" id="nav-home" role="navigation">
+	<div class="container">
+		<!-- Brand and toggle get grouped for better mobile display -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">雪景</a>
+		</div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#nav-home">首页</a></li>
-            <li><a href="#div1">Link3</a></li>
-            <li><a href="#div2">Link3</a></li>
-            <li><a href="#div3">Link3</a></li>
-          </ul>
-        </div><!-- /.navbar-collapse -->
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#nav-home">首页</a></li>
+				<li><a href="#div1">Link3</a></li>
+				<li><a href="#div2">Link3</a></li>
+				<li><a href="#div3">Link3</a></li>
+			</ul>
+		</div><!-- /.navbar-collapse -->
 
-      </div><!-- /.container-fluid -->
-    </nav>
+	</div><!-- /.container-fluid -->
+</nav>
 
 
 <div class="wrapper">
@@ -65,237 +65,20 @@
 
 	<div class="main main-raised">
 		<div class="section section-basic">
-	    	<div class="container">
-	            <div class="title">
-	                <h2>Basic Elements</h2>
-	            </div>
-
-		        <div id="buttons">
-					<div class="title">
-						<h3>Buttons <br />
-							<small>Pick your style</small>
-						</h3>
-					</div>
-					<div class="row">
-						<div class="col-md-8 col-md-offset-2">
-							<button class="btn btn-primary">Default</button>
-							<button class="btn btn-primary btn-round">Round</button>
-							<button class="btn btn-primary btn-round">
-								<i class="material-icons">favorite</i> With Icon
-							</button>
-							<button class="btn btn-primary btn-fab btn-fab-mini btn-round">
-								<i class="material-icons">favorite</i>
-							</button>
-							<button class="btn btn-primary btn-simple">Simple</button>
-						</div>
-					</div>
-					<div class="title">
-	                    <h3><small>Pick your size</small></h3>
-	                </div>
-	                <div class="row">
-	                    <div class="col-md-8 col-md-offset-2">
-	                        <button class="btn btn-primary btn-xs">x-Small</button>
-	                        <button class="btn btn-primary btn-sm">Small</button>
-	                        <button class="btn btn-primary">Regular</button>
-	                        <button class="btn btn-primary btn-lg">Large</button>
-	                    </div>
-	                </div>
-
-					<div class="title">
-	                    <h3><small> Pick your color </small></h3>
-	                </div>
-	                <div class="row">
-	                    <div class="col-md-8 col-md-offset-2">
-	                        <button class="btn">Default</button>
-	                        <button class="btn btn-primary">Primary</button>
-	                        <button class="btn btn-info">Info</button>
-	                        <button class="btn btn-success">Success</button>
-	                        <button class="btn btn-warning">Warning</button>
-	                        <button class="btn btn-danger">Danger</button>
-	                    </div>
-	                </div>
-	                <div class="title">
-	                    <h3>Links</h3>
-	                </div>
-	                <div class="row">
-	                    <div class="col-md-8 col-md-offset-2">
-	                        <button class="btn btn-simple">Default</button>
-	                        <button class="btn btn-simple btn-primary ">Primary</button>
-	                        <button class="btn btn-simple btn-info">Info</button>
-	                        <button class="btn btn-simple btn-success">Success</button>
-	                        <button class="btn btn-simple btn-warning">Warning</button>
-	                        <button class="btn btn-simple btn-danger">Danger</button>
-	                    </div>
-	                </div>
-		        </div>
-
-		        <div id="inputs">
-		            <div class="title">
-		                <h3>Inputs</h3>
-		            </div>
-
-		            <div class="row">
-						<div class="col-sm-3">
-		                	<div class="form-group">
-		        	        	<input type="text" value="" placeholder="Regular" class="form-control" />
-		                	</div>
-		                </div>
-
-						<div class="col-sm-3">
-							<div class="form-group label-floating">
-								<label class="control-label">With Floating Label</label>
-								<input type="email" class="form-control">
-							</div>
-						</div>
-
-		                <div class="col-sm-3">
-		                	<div class="form-group label-floating has-success">
-								<label class="control-label">Success input</label>
-		                    	<input type="text" value="Success" class="form-control" />
-								<span class="form-control-feedback">
-									<i class="material-icons">done</i>
-								</span>
-		                	</div>
-		                </div>
-
-		                <div class="col-sm-3">
-		                	<div class="form-group label-floating has-error">
-								<label class="control-label">Error input</label>
-		                    	<input type="email" value="Error Input" class="form-control" />
-		                    	<span class="material-icons form-control-feedback">clear</span>
-		                	</div>
-		                </div>
-
-						<div class="col-sm-3">
-							<div class="input-group">
-								<span class="input-group-addon">
-									<i class="material-icons">group</i>
-								</span>
-								<input type="text" class="form-control" placeholder="With Material Icons">
-							</div>
-						</div>
-
-						<div class="col-sm-3">
-							<div class="input-group">
-								<span class="input-group-addon">
-									<i class="fa fa-group"></i>
-								</span>
-								<input type="text" class="form-control" placeholder="With Font Awesome Icons">
-							</div>
-						</div>
-					</div>
+			<div class="container">
+				<div class="title">
+					<h2>Basic Elements</h2>
 				</div>
 
-				<div class="space-70"></div>
-
-				<div id="checkRadios">
-				    <div class="row">
-		                <div class="col-sm-3">
-		                    <div class="title">
-		                        <h3>Checkboxes</h3>
-		                    </div>
-
-							<div class="checkbox">
-								<label>
-									<input type="checkbox" name="optionsCheckboxes">
-									Unchecked
-								</label>
-							</div>
-
-							<div class="checkbox">
-								<label>
-									<input type="checkbox" name="optionsCheckboxes" checked>
-									Checked
-								</label>
-							</div>
-
-							<div class="checkbox">
-								<label>
-									<input type="checkbox" name="optionsCheckboxes" disabled>
-									Disabled Unchecked
-								</label>
-							</div>
-
-							<div class="checkbox">
-								<label>
-									<input type="checkbox" name="optionsCheckboxes" disabled checked>
-									Disabled Checked
-								</label>
-							</div>
-
-		                </div>
-
-		                <div class="col-sm-3">
-		                    <div class="title">
-		                        <h3>Radio Buttons</h3>
-		                    </div>
-
-							<div class="radio">
-								<label>
-									<input type="radio" name="optionsRadios">
-									Radio is off
-								</label>
-							</div>
-							<div class="radio">
-								<label>
-									<input type="radio" name="optionsRadios" checked="true">
-									Radio is on
-								</label>
-							</div>
-							<div class="radio">
-								<label>
-									<input type="radio" name="optionsRadiosDisabled" disabled>
-									Disabled Radio is off
-								</label>
-							</div>
-							<div class="radio">
-								<label>
-									<input type="radio" name="optionsRadiosDisabled" checked="true" disabled>
-									Disabled Radio is on
-								</label>
-							</div>
-		                </div>
-
-						<div class="col-sm-3">
-		                    <div class="title">
-		                        <h3>Toggle Buttons</h3>
-							</div>
-
-							<div class="togglebutton">
-				            	<label>
-				                	<input type="checkbox" checked="">
-									Toggle is on
-				            	</label>
-				            </div>
-
-							<div class="togglebutton">
-				            	<label>
-				                	<input type="checkbox">
-									Toggle is off
-				            	</label>
-				            </div>
-		                </div>
-
-						<div class="col-sm-3">
-							<div class="title">
-		                        <h3>Sliders</h3>
-		                    </div>
-
-							<div id="sliderRegular" class="slider"></div>
-							<div id="sliderDouble" class="slider slider-info"></div>
-						</div>
-
-		            </div>
-		        </div>
-	    	</div>
-	    </div>
+			</div>
+		</div>
 
 
 	</div>
-    <footer class="footer">
-	    <div class="container">
-	        <nav class="pull-left">
-	            <ul>
+	<footer class="footer">
+		<div class="container">
+			<nav class="pull-left">
+				<ul>
 					<li>
 						<a href="http://www.creative-tim.com">
 							Creative Tim
@@ -303,12 +86,12 @@
 					</li>
 					<li>
 						<a href="http://presentation.creative-tim.com">
-						   About Us
+							About Us
 						</a>
 					</li>
 					<li>
 						<a href="http://blog.creative-tim.com">
-						   Blog
+							Blog
 						</a>
 					</li>
 					<li>
@@ -316,45 +99,45 @@
 							Licenses
 						</a>
 					</li>
-	            </ul>
-	        </nav>
-	        <div class="copyright pull-right">
-	            &copy; 2016, made with <i class="material-icons">favorite</i> by Creative Tim for a better web.
-	        </div>
-	    </div>
+				</ul>
+			</nav>
+			<div class="copyright pull-right">
+				&copy; 2016 isnows web.
+			</div>
+		</div>
 	</footer>
 </div>
 
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="libs/js/jquery-2.2.4.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="libs/js/bootstrap.min.js"></script>
-    
-	<script src="js/material.min.js"></script>
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="libs/js/jquery-2.2.4.min.js"></script>
+<!-- Include all compiled plugins (below), or include individual files as needed -->
+<script src="libs/js/bootstrap.min.js"></script>
 
-	<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-	<script src="js/nouislider.min.js" type="text/javascript"></script>
+<script src="js/material.min.js"></script>
 
-	<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-	<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="js/nouislider.min.js" type="text/javascript"></script>
 
-	<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
-	<script src="js/material-kit.js" type="text/javascript"></script>
-  	<script type="text/javascript">
-		$().ready(function(){
-			// the body of this function is in material-kit.js
-			materialKit.initSliders();
-            window_width = $(window).width();
+<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
+<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 
-            if (window_width >= 992){
-                big_image = $('.wrapper > .header');
+<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<script src="js/material-kit.js" type="text/javascript"></script>
+<script type="text/javascript">
+	$().ready(function(){
+		// the body of this function is in material-kit.js
+		materialKit.initSliders();
+		window_width = $(window).width();
 
-				$(window).on('scroll', materialKitDemo.checkScrollForParallax);
-			}
+		if (window_width >= 992){
+			big_image = $('.wrapper > .header');
 
-		});
-	</script>
-  </body>
+			$(window).on('scroll', materialKitDemo.checkScrollForParallax);
+		}
+
+	});
+</script>
+</body>
 
 </html>
