--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bootstrap Template</title>
+	<!--     Fonts and icons     -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" />
 
 	<!-- Bootstrap -->
 	<link href="libs/css/bootstrap.min.css" rel="stylesheet">
@@ -21,12 +25,12 @@
 </head>
 
 <body class="index-page">
-<nav class="navbar navbar-default navbar-fixed-top navbar-sticky" id="nav-home" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top navbar-sticky" role="navigation">
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-				<span class="sr-only">Toggle navigation</span>
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navigation-index">
+				<span class="sr-only">导航</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -35,12 +39,12 @@
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
-		<div class="collapse navbar-collapse">
+		<div class="collapse navbar-collapse" id="navigation-index">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#nav-home">首页</a></li>
-				<li><a href="#div1">Link3</a></li>
-				<li><a href="#div2">Link3</a></li>
-				<li><a href="#div3">Link3</a></li>
+				<li><a data-toggle="scrollTo" href="#nav-home">首页</a></li>
+				<li><a data-toggle="scrollTo" href="#product">产品</a></li>
+				<li><a data-toggle="scrollTo" href="#service">服务</a></li>
+				<!--<li><a data-toggle="scrollTo" href="#footer">checkRadios</a></li>-->
 			</ul>
 		</div><!-- /.navbar-collapse -->
 
@@ -48,8 +52,8 @@
 </nav>
 
 
-<div class="wrapper">
-	<div class="header header-filter" style="background-image: url('img/bg2.jpeg');">
+<div class="wrapper"  id="nav-home">
+	<div class="header header-filter" style="background-image: url('img/bg.jpg');">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
@@ -66,64 +70,176 @@
 	<div class="main main-raised">
 		<div class="section section-basic">
 			<div class="container">
-				<div class="title">
-					<h2>Basic Elements</h2>
+					<div id="product" class="title">
+							<h2>产品</h2>
+					</div>
+				<!-- START PIC TEXT LEFT-->
+				<section class="pic-text pic-text-left">
+					<div class="container">
+						<div class="row">
+							<!-- LEFT PIC-->
+							<div data-wow-offset="15" data-wow-duration="1.2s" class="col-md-6 wow fadeInLeft animated">
+								<div class="mockup-mobile">
+									<img src="img/ipad-air.png" alt="" data-no-retina>
+								</div>
+							</div>
+							<!-- RIGHT TEXT-->
+							<div class="col-md-6">
+								<!-- SECTION TITLE-->
+								<h2>雪花电池</h2>
+								<p>
+									雪花电池雪花电池雪花电池雪花电池雪花电池
+									雪花电池雪花电池雪花电池雪花电池雪花电池
+									雪花电池雪花电池雪花电池雪花电池雪花电池
+									雪花电池雪花电池雪花电池雪花电池雪花电池
+								</p>
+								<!-- FEATURE LIST-->
+								<ul class="featured-list">
+									<li>
+                    <span class="fa-stack fa-lg">
+											<em class="fa fa-circle fa-stack-2x"></em>
+											<em class="fa fa-code fa-stack-1x fa-inverse"></em>
+										</span>
+										<p>
+											雪花电池
+										</p>
+									</li>
+									<li>
+                    <span class="fa-stack fa-lg">
+											<em class="fa fa-circle fa-stack-2x"></em>
+											<em class="fa fa-bullhorn fa-stack-1x fa-inverse"></em>
+										</span>
+										<p>
+											雪花电池
+										</p>
+									</li>
+									<li>
+                    <span class="fa-stack fa-lg">
+											<em class="fa fa-circle fa-stack-2x"></em>
+											<em class="fa fa-compass fa-stack-1x fa-inverse"></em>
+										</span>
+										<p>
+											雪花电池
+										</p>
+									</li>
+									<li>
+                    <span class="fa-stack fa-lg">
+											<em class="fa fa-circle fa-stack-2x"></em>
+											<em class="fa fa-paint-brush fa-stack-1x fa-inverse"></em>
+										</span>
+										<p>
+											雪花电池
+										</p>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
+				<!-- END PIC TEXT LEFT-->
+				<div id="service" class="title">
+						<h2>服务</h2>
 				</div>
+				<!-- START APP SHOTS-->
+				<section class="versions">
+					<div class="container">
+						<div class="row bottom-space">
+							<div class="col-lg-4 col-sm-6 col-xs-12">
+								<div class="media media-card">
+									<div class="media-left media-middle">
+										<a href="#">
+											<img src="img/versions-list01.png" width="128" alt="" data-no-retina="" data-wow-offset="15" data-wow-duration=".5s" class="wow zoomIn animated img-responsive version-pic">
+										</a>
+									</div>
+									<div class="media-body">
+										<h4 class="media-heading">手机</h4>
+										<p class="media-card-text">
+											手机手机手机手机手机手机手机手机手机
+											手机手机手机手机手机手机手机手机手机
+										</p>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">Live Demo</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-4 col-sm-6 col-xs-12">
+								<div class="media media-card">
+									<div class="media-left media-middle">
+										<a href="#">
+											<img src="img/versions-list01.png" width="128" alt="" data-no-retina="" data-wow-offset="15" data-wow-duration=".5s" class="wow zoomIn animated img-responsive version-pic">
+										</a>
+									</div>
+									<div class="media-body">
+										<h4 class="media-heading">手机</h4>
+										<p class="media-card-text">
+											手机手机手机手机手机手机手机手机手机
+											手机手机手机手机手机手机手机手机手机
+										</p>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">Live Demo</a>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-lg-4 col-sm-6 col-xs-12">
+								<div class="media media-card">
+									<div class="media-left media-middle">
+										<a href="#">
+											<img src="img/versions-list01.png" width="128" alt="" data-no-retina="" data-wow-offset="15" data-wow-duration=".5s" class="wow zoomIn animated img-responsive version-pic">
+										</a>
+									</div>
+									<div class="media-body">
+										<h4 class="media-heading">手机</h4>
+										<p class="media-card-text">
+											手机手机手机手机手机手机手机手机手机
+											手机手机手机手机手机手机手机手机手机
+										</p>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">Live Demo</a>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="text-center">
+
+						</div>
+					</div>
+				</section>
+				<!-- END APP SHOTS-->
 
 			</div>
 		</div>
-
-
 	</div>
+
 	<footer class="footer">
 		<div class="container">
 			<nav class="pull-left">
 				<ul>
-					<li>
-						<a href="http://www.creative-tim.com">
-							Creative Tim
-						</a>
-					</li>
-					<li>
-						<a href="http://presentation.creative-tim.com">
-							About Us
-						</a>
-					</li>
-					<li>
-						<a href="http://blog.creative-tim.com">
-							Blog
-						</a>
-					</li>
-					<li>
-						<a href="http://www.creative-tim.com/license">
-							Licenses
-						</a>
-					</li>
+					<li><a href="#">首页</a></li>
+					<li><a href="#">产品</a></li>
+					<li><a href="#">服务</a></li>
 				</ul>
 			</nav>
 			<div class="copyright pull-right">
-				&copy; 2016 isnows web.
+				版权所有 &copy; 2016 isnows web.
 			</div>
 		</div>
 	</footer>
+
 </div>
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="libs/js/jquery-2.2.4.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="libs/js/bootstrap.min.js"></script>
-
 <script src="js/material.min.js"></script>
-
-<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
 <script src="js/nouislider.min.js" type="text/javascript"></script>
 
-<!--  Plugin for the Datepicker, full documentation here: http://www.eyecon.ro/bootstrap-datepicker/ -->
-<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
+<script src="plugins/jquery.easing/jquery.easing.js" type="text/javascript"></script>
+<script src="plugins/smoothscroll/smoothscroll.js" type="text/javascript"></script>
 
-<!-- Control Center for Material Kit: activating the ripples, parallax effects, scripts from the example pages etc -->
+<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
 <script src="js/material-kit.js" type="text/javascript"></script>
+<script src="js/script-mime.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$().ready(function(){
 		// the body of this function is in material-kit.js
