--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 		<div class="collapse navbar-collapse" id="navigation-index">
 			<ul class="nav navbar-nav navbar-right">
 				<li><a data-toggle="scrollTo" href="#nav-home">首页</a></li>
-				<li><a data-toggle="scrollTo" href="#product">产品</a></li>
-				<li><a data-toggle="scrollTo" href="#service">服务</a></li>
+				<li><a data-toggle="scrollTo" href="#nav-product">产品</a></li>
+				<li><a data-toggle="scrollTo" href="#nav-service">服务</a></li>
 				<!--<li><a data-toggle="scrollTo" href="#footer">checkRadios</a></li>-->
 			</ul>
 		</div><!-- /.navbar-collapse -->
@@ -70,7 +70,7 @@
 	<div class="main main-raised">
 		<div class="section section-basic">
 			<div class="container">
-					<div id="product" class="title">
+					<div id="nav-product" class="title">
 							<h2>产品</h2>
 					</div>
 				<!-- START PIC TEXT LEFT-->
@@ -137,7 +137,7 @@
 					</div>
 				</section>
 				<!-- END PIC TEXT LEFT-->
-				<div id="service" class="title">
+				<div id="nav-service" class="title">
 						<h2>服务</h2>
 				</div>
 				<!-- START APP SHOTS-->
@@ -157,7 +157,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="#" class="btn btn-sm btn-info">Live Demo</a>
+										<div class="text-right"><a href="javascript:;" class="btn btn-sm btn-info btn-simple">Live Demo</a>
 										</div>
 									</div>
 								</div>
@@ -201,6 +201,8 @@
 						</div>
 						<div class="text-center">
 
+							<div id="sliderRegular" class="slider"></div>
+							<div id="sliderDouble" class="slider slider-info"></div>
 						</div>
 					</div>
 				</section>
@@ -232,23 +234,20 @@
 <script src="libs/js/jquery-2.2.4.min.js"></script>
 <script src="libs/js/bootstrap.min.js"></script>
 <script src="js/material.min.js"></script>
-<script src="js/nouislider.min.js" type="text/javascript"></script>
+<!--<script src="js/nouislider.min.js" type="text/javascript"></script>-->
 
 <script src="plugins/jquery.easing/jquery.easing.js" type="text/javascript"></script>
 <script src="plugins/smoothscroll/smoothscroll.js" type="text/javascript"></script>
 
 <script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
-<script src="js/material-kit.js" type="text/javascript"></script>
+<!--<script src="js/material-kit.js" type="text/javascript"></script>-->
 <script src="js/script-mime.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$().ready(function(){
 		// the body of this function is in material-kit.js
-		materialKit.initSliders();
 		window_width = $(window).width();
-
 		if (window_width >= 992){
 			big_image = $('.wrapper > .header');
-
 			$(window).on('scroll', materialKitDemo.checkScrollForParallax);
 		}
 
