--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="index-page">
-<nav class="navbar navbar-default navbar-fixed-top navbar-sticky" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-transparent navbar-color-on-scroll" role="navigation">
 	<div class="container">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
@@ -157,7 +157,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="javascript:;" class="btn btn-sm btn-info btn-simple">Live Demo</a>
+										<div class="text-right"><a href="javascript:;" class="btn btn-sm btn-info">看一下</a>
 										</div>
 									</div>
 								</div>
@@ -175,7 +175,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="#" class="btn btn-sm btn-info">Live Demo</a>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">看一下</a>
 										</div>
 									</div>
 								</div>
@@ -193,7 +193,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="#" class="btn btn-sm btn-info">Live Demo</a>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">看一下</a>
 										</div>
 									</div>
 								</div>
@@ -239,8 +239,6 @@
 <script src="plugins/jquery.easing/jquery.easing.js" type="text/javascript"></script>
 <script src="plugins/smoothscroll/smoothscroll.js" type="text/javascript"></script>
 
-<script src="js/bootstrap-datepicker.js" type="text/javascript"></script>
-<!--<script src="js/material-kit.js" type="text/javascript"></script>-->
 <script src="js/script-mime.js" type="text/javascript"></script>
 <script type="text/javascript">
 	$().ready(function(){
