--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 			</button>
 			<a class="navbar-brand" href="#">雪景</a>
 		</div>
-
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="navigation-index">
 			<ul class="nav navbar-nav navbar-right">
@@ -45,7 +44,6 @@
 				<!--<li><a data-toggle="scrollTo" href="#footer">checkRadios</a></li>-->
 			</ul>
 		</div><!-- /.navbar-collapse -->
-
 	</div><!-- /.container-fluid -->
 </nav>
 
@@ -61,7 +59,6 @@
 					</div>
 				</div>
 			</div>
-
 		</div>
 	</div>
 
@@ -84,7 +81,9 @@
 							<!-- RIGHT TEXT-->
 							<div class="col-md-6">
 								<!-- SECTION TITLE-->
-								<h2>雪花电池</h2>
+								<h2>雪花电池
+									<button class="btn btn-boder btn-simple btn-sm btn-info float-r">更多</button>
+								</h2>
 								<p>
 									雪花电池雪花电池雪花电池雪花电池雪花电池
 									雪花电池雪花电池雪花电池雪花电池雪花电池
@@ -135,6 +134,11 @@
 					</div>
 				</section>
 				<!-- END PIC TEXT LEFT-->
+			</div>
+		</div>
+
+		<div class="section section-basic">
+			<div class="container">
 				<div id="nav-service" class="title">
 						<h2>服务</h2>
 				</div>
@@ -155,7 +159,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="javascript:;" class="btn btn-sm btn-info">看一下</a>
+										<div class="text-right"><a href="javascript:;" class="btn btn-sm btn-info">更多</a>
 										</div>
 									</div>
 								</div>
@@ -173,7 +177,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="#" class="btn btn-sm btn-info">看一下</a>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">更多</a>
 										</div>
 									</div>
 								</div>
@@ -191,7 +195,7 @@
 											手机手机手机手机手机手机手机手机手机
 											手机手机手机手机手机手机手机手机手机
 										</p>
-										<div class="text-right"><a href="#" class="btn btn-sm btn-info">看一下</a>
+										<div class="text-right"><a href="#" class="btn btn-sm btn-info">更多</a>
 										</div>
 									</div>
 								</div>
@@ -205,9 +209,9 @@
 					</div>
 				</section>
 				<!-- END APP SHOTS-->
-
 			</div>
 		</div>
+
 	</div>
 
 	<footer class="footer">
