--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 				<li><a data-toggle="scrollTo" href="#nav-home">首页</a></li>
 				<li><a data-toggle="scrollTo" href="#nav-product">产品</a></li>
 				<li><a data-toggle="scrollTo" href="#nav-service">服务</a></li>
+				<li><a data-toggle="scrollTo" href="#nav-about">关于我们</a></li>
 				<!--<li><a data-toggle="scrollTo" href="#footer">checkRadios</a></li>-->
 			</ul>
 		</div><!-- /.navbar-collapse -->
@@ -81,9 +82,9 @@
 							<!-- RIGHT TEXT-->
 							<div class="col-md-6">
 								<!-- SECTION TITLE-->
-								<h2>雪花电池
+								<h3>雪花电池
 									<button class="btn btn-boder btn-simple btn-sm btn-info float-r">更多</button>
-								</h2>
+								</h3>
 								<p>
 									雪花电池雪花电池雪花电池雪花电池雪花电池
 									雪花电池雪花电池雪花电池雪花电池雪花电池
@@ -145,7 +146,7 @@
 				<!-- START APP SHOTS-->
 				<section class="versions">
 					<div class="container">
-						<div class="row bottom-space">
+						<div class="row">
 							<div class="col-lg-4 col-sm-6 col-xs-12">
 								<div class="media media-card">
 									<div class="media-left media-middle">
@@ -201,10 +202,55 @@
 								</div>
 							</div>
 						</div>
-						<div class="text-center">
+					</div>
+				</section>
+				<!-- END APP SHOTS-->
+			</div>
+		</div>
 
-							<div id="sliderRegular" class="slider"></div>
-							<div id="sliderDouble" class="slider slider-info"></div>
+		<div class="section section-basic">
+			<div class="container">
+				<div id="nav-about" class="title">
+						<h2>关于我们</h2>
+				</div>
+				<!-- START APP SHOTS-->
+				<section class="versions">
+					<div class="container">
+						<div class="row">
+							<!-- START map-->
+							<div class="col-md-8">
+								<iframe width="100%" height="440" src="plugins/map/map.html" scrolling="no" frameborder="no"></iframe>
+							</div>
+							<!-- end map-->
+							<div class="col-md-4">
+								<!-- SECTION TITLE-->
+								<h3>联系我们</h3>
+								<!-- FEATURE LIST-->
+								<ul class="featured-list">
+									<li>
+											<p>电话：110</p>
+									</li>
+									<li>
+											<p>邮箱：1234@qq.com</p>
+									</li>
+									<li>
+											<p>地址：湖北省武汉市江夏区文化大道特一号</p>
+									</li>
+								</ul>
+								<!-- SECTION TITLE-->
+								<h3>关注我们</h3>
+								<!-- FEATURE LIST-->
+								<ul class="featured-list">
+									<li>
+											<p>微博：<a target="_blank" href="http://weibo.com/p/1006065838375310/home" >雪景科技</a></p>
+									</li>
+									<li>
+											<p>微信：雪景科技
+												<br/><img style="height: 180px;width: 180px;margin-left: 2em;" src="img/qr_code-300x300.jpg">
+										</p>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -218,9 +264,9 @@
 		<div class="container">
 			<nav class="pull-left">
 				<ul>
-					<li><a href="#">首页</a></li>
-					<li><a href="#">产品</a></li>
-					<li><a href="#">服务</a></li>
+					<li><a href="#">公司简介</a></li>
+					<li><a href="#">资讯</a></li>
+					<li><a href="#">联系我们</a></li>
 				</ul>
 			</nav>
 			<div class="copyright pull-right">
