--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
 <head>
 	<meta charset="utf-8">
+   <meta name="description" content="Landing Page Template">
+   <meta name="keywords" content="bootstrap, app, theme">
+   <meta name="author" content="@mime">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>isnows</title>
 	<!--     Fonts and icons     -->
+	<link rel="icon" href="img/favicon.png">
 	<link rel="stylesheet" href="libs/css/font-awesome.min.css" />
 
 	<!-- Bootstrap -->
@@ -33,7 +37,16 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="#">雪景</a>
+
+			<a class="navbar-brand clearfix" href="#">
+				<div class="logo-container clearfix">
+					<div class="logo">
+					</div>
+					<div class="logo-brand">雪景科技
+					</div>
+				</div>
+				<!--<img width="50" height="26" src="img/logo-black50.png" alt="Creative Tim Logo" rel="tooltip" title="" data-placement="bottom" data-html="true">-->
+			</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="navigation-index">
@@ -228,7 +241,7 @@
 								<!-- FEATURE LIST-->
 								<ul class="featured-list">
 									<li>
-											<p>电话：110</p>
+											<p>电话：15972140296(李)</p>
 									</li>
 									<li>
 											<p>邮箱：1234@qq.com</p>
@@ -245,7 +258,7 @@
 											<p>微博：<a target="_blank" href="http://weibo.com/p/1006065838375310/home" >雪景科技</a></p>
 									</li>
 									<li>
-											<p>微信：雪景科技
+											<p>微信：雪景科技(公众号)
 												<br/><img style="height: 180px;width: 180px;margin-left: 2em;" src="img/qr_code-300x300.jpg">
 										</p>
 									</li>
@@ -255,6 +268,58 @@
 					</div>
 				</section>
 				<!-- END APP SHOTS-->
+			</div>
+		</div>
+
+		<div class="section section-basic bgl-grey-100">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="title">
+							<h3>Tabs with Icons on Card</h3>
+						</div>
+
+						<!-- Tabs with icons on Card -->
+						<div class="card card-nav-tabs">
+							<div class="header header-info">
+								<!-- colors: "header-primary", "header-info", "header-success", "header-warning", "header-danger" -->
+								<div class="nav-tabs-navigation">
+									<div class="nav-tabs-wrapper">
+										<ul class="nav nav-tabs" data-tabs="tabs">
+											<li class="active">
+												<a href="#profile" data-toggle="tab">
+													公司简介
+												</a>
+											</li>
+											<li>
+												<a href="#messages" data-toggle="tab">
+													资讯
+												</a>
+											</li>
+										</ul>
+									</div>
+								</div>
+							</div>
+							<div class="content">
+								<div class="tab-content text-center">
+									<div class="tab-pane active" id="introduction">
+										<p>
+											I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+										</p>
+									</div>
+									<div class="tab-pane" id="messages">
+										<p>
+											I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
+										</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- End Tabs with icons on Card -->
+					</div>
+
+
+				</div>
 			</div>
 		</div>
 
