--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
 									<div class="nav-tabs-wrapper">
 										<ul class="nav nav-tabs" data-tabs="tabs">
 											<li class="active">
-												<a href="#profile" data-toggle="tab">
-													公司简介
+												<a href="#information" data-toggle="tab">
+													资讯动态
 												</a>
 											</li>
 											<li>
-												<a href="#messages" data-toggle="tab">
-													资讯
+												<a href="#introduction" data-toggle="tab">
+													公司简介
 												</a>
 											</li>
 										</ul>
@@ -301,18 +301,62 @@
 								</div>
 							</div>
 							<div class="content">
-								<div class="tab-content text-center">
-									<div class="tab-pane active" id="introduction">
-										<p>
-											I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
-										</p>
+								<div class="tab-content">
+									<div class="tab-pane active" id="information">
+										<ul class="featured-list">
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
+											</li>
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762705&idx=1&sn=b0d3e0dfeae5e5ec7ec5d11c0acf2dd3&scene=0#wechat_redirect">小小指令集，小有大作用</a>
+											</li>
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762704&idx=1&sn=e03ab978e5e6f221f70e7ad62f806294&scene=0#wechat_redirect">别问我！什么是CPU的性能参数</a>
+											</li>
+											<li class="col-lg-4 col-sm-6 col-xs-12">
+													<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=503278511&idx=1&sn=06cbec30a638a15ebfc60c33f42d9e6b&scene=18#wechat_redirect">电脑周边</a>
+											</li>
+										</ul>
 									</div>
-									<div class="tab-pane" id="messages">
-										<p>
-											I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at.
-										</p>
+									<div class="tab-pane" id="introduction">
+												<div class="col-lg-4 col-sm-6 col-xs-12">
+													<p>
+														武汉雪景科技有限公司是一家由武汉东湖学院学生创立的初创型科技公司。注册于2016年。公司拥有自主知识产权的项目在全国“互联网+”省赛中夺得铜奖，并正在冲刺金奖和国家级比赛。
+													</p>
+													<p>
+														公司旨在打造“依托专业优势，围绕市场创业”的创新型公司。
+													</p>
+													<p>
+														公司创始人李志鹏是2012级电信学院电子科学与技术专业的优秀毕业生，他联合电信学院和各社团并达成了良好、持续共赢的稳定合作，为公司未来发展创造了无限可能。
+													</p>
+												</div>
+
+												<div class="col-lg-4 col-sm-6 col-xs-12">
+													<h4>公司主要业务</h4>
+													<ul class="featured-list">
+														<li class="word">线上线下电子产品及配件销售</li>
+														<li class="word">线上线下电子产品及配件销售</li>
+														<li class="word">线上线下电子产品及配件销售</li>
+													</ul>
+												</div>
+
+												<div class="col-lg-4 col-sm-6 col-xs-12">
+													<p>
+		我们秉承“专业、诚信、用心”的经营理念致力于电子产品设备的研发销售。我们不断创新，不断积累，期待在最关键的时刻为您提供最优质完善的产品和服务，做到产品满意，售后放心。
+
+													</p>
+													<p>
+		我们的企业目标：
+		做专业、诚信、优秀的产品供应商
+		我们的服务宗旨：
+		以最合理的价格，最完善的服务，提供最优质的产品
+													</p>
+													<p>
+														公司目前合作的业务有：华硕、联想、戴尔、苹果、索尼等电脑品牌和华为、vivo、OPPO、小米、魅族、苹果、三星、诺基亚、乐视、美图等手机品牌。
+
+													</p>
+												</div>
 									</div>
-								</div>
 							</div>
 						</div>
 						<!-- End Tabs with icons on Card -->
