公司首页初版

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
 	<meta charset="utf-8">
-   <meta name="description" content="Landing Page Template">
-   <meta name="keywords" content="bootstrap, app, theme">
-   <meta name="author" content="@mime">
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="@mime">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>isnows</title>
@@ -380,13 +380,11 @@
 		<div class="container">
 			<nav class="pull-left">
 				<ul>
-					<li><a href="#">加入雪景</a></li>
-					<li><a href="#">资讯</a></li>
-					<li><a href="#">联系我们</a></li>
+					<li><a href="#">加入我们</a></li>
 				</ul>
 			</nav>
 			<div class="copyright pull-right">
-				版权所有 &copy; 2016 isnows web.
+				&copy; 2016 ISNOWS. 鄂00000000000000
 			</div>
 		</div>
 	</footer>
