--- a/plugins/map/map.html
+++ b/plugins/map/map.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<style type="text/css">
-	body, html{width: 100%;height: 100%;margin:0;font-family:"微软雅黑";}
+	body, html{width: 100%;height: 100%;margin:0;font-family:Helvetica, Tahoma, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei", STXihei, STHeiti, Heiti, SimSun, sans-serif;}
 	#allmap {height: 100%;width:100%;overflow: hidden;}
 	dl,dt,dd,ul,li{
 		margin:0;
@@ -13,7 +13,6 @@
 	}
 	dt{
 		font-size:14px;
-		font-family:"微软雅黑";
 		font-weight:bold;
 		border-bottom:1px dotted #000;
 		padding:5px 0 5px 5px;
@@ -41,8 +40,8 @@
   map.centerAndZoom(poi, 14);
   map.enableScrollWheelZoom();
 
-  var content = '<div style="margin:0;line-height:20px;padding:2px;">' +
-      '<img src="logo-80x80.png" alt="" style="float:right;zoom:1;overflow:hidden;width:50px;height:50px;margin-left:3px;"/>' +
+  var content = '<div style="margin:0;line-height:20px;padding:2px;color: #3C4858">' +
+      '<img src="logo-80x80.png" alt="" style="float:right;zoom:1;overflow:hidden;width:50px;height:50px;margin-left:3px;">' +
       '地址：武汉东湖学院科技大楼B602<br/>简介：武汉雪景科技有限公司' +
       '</div>';
   //创建检索信息窗口对象
