--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
 					<div class="logo-brand">雪景科技
 					</div>
 				</div>
-				<!--<img width="50" height="26" src="img/logo-black50.png" alt="Creative Tim Logo" rel="tooltip" title="" data-placement="bottom" data-html="true">-->
 			</a>
 		</div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,15 +64,13 @@
 <!--wrapper start-->
 <div class="wrapper"  id="nav-home">
 	<!--header start-->
-	<div class="header header-filter" style="background-image: url('img/bg.jpg');">
+	<div class="header header-filter" style="background-image: url('img/index-banner.jpg');">
 		<div class="container">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
 					<div class="brand">
 						<h1>Material Kit.</h1>
 						<h3>A Badass Bootstrap UI Kit based on Material Design.</h3>
 					</div>
-				</div>
 			</div>
 		</div>
 	</div>
