--- a/article-list.html
+++ b/article-list.html
@@ -61,7 +61,7 @@
 </nav>
 <!--以上公共-->
 <div class="wrapper">
-	<div class="header header-filter" style="background-image: url('img/information-list-banner.jpg');">
+	<div class="header header-filter" style="background-image: url('img/article-list-banner.jpg');">
 		<div class="container">
 			<div class="row">
 					<div class="brand">
