--- a/article-list.html
+++ b/article-list.html
@@ -49,12 +49,11 @@
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="navigation-index">
 			<ul class="nav navbar-nav navbar-right">
-				<li><a data-toggle="scrollTo" href="#nav-home">首页</a></li>
-				<li><a data-toggle="scrollTo" href="#nav-product">产品</a></li>
-				<li><a data-toggle="scrollTo" href="#nav-service">服务</a></li>
-				<li><a data-toggle="scrollTo" href="#nav-content">内容</a></li>
-				<li><a data-toggle="scrollTo" href="#nav-about">关于我们</a></li>
-				<!--<li><a data-toggle="scrollTo" href="#footer">checkRadios</a></li>-->
+				<li><a href="index.html#nav-home">首页</a></li>
+				<li><a href="index.html#nav-product">产品</a></li>
+				<li><a href="index.html#nav-service">服务</a></li>
+				<li><a href="index.html#nav-content">内容</a></li>
+				<li><a href="index.html#nav-about">关于我们</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div><!-- /.container-fluid -->
@@ -72,9 +71,44 @@
 	</div>
 
 	<div class="main main-raised">
-		<div class="container">
-			资讯列表
+		<!--资讯动态 start-->
+		<div class="section section-basic">
+			<div class="container">
+				<div class="title">
+						<h3>资讯动态</h3>
+				</div>
+				<!-- START APP SHOTS-->
+				<section class="versions">
+					<ul class="list-group">
+						<li class="list-group-item">
+								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
+						</li>
+						<li class="list-group-item">
+								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
+						</li>
+						<li class="list-group-item">
+								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
+						</li>
+						<li class="list-group-item">
+								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
+						</li>
+					</ul>
+				</section>
+				<!-- END APP SHOTS-->
+				<ul class="pagination pagination-info">
+					<li><a href="javascript:void(0);">首页</a></li>
+					<li><a href="javascript:void(0);">&lt;</a></li>
+					<li><a href="javascript:void(0);">1</a></li>
+					<li><a href="javascript:void(0);">2</a></li>
+					<li class="active"><a href="javascript:void(0);">3</a></li>
+					<li><a href="javascript:void(0);">4</a></li>
+					<li><a href="javascript:void(0);">5</a></li>
+					<li><a href="javascript:void(0);">&gt;</a></li>
+					<li><a href="javascript:void(0);">尾页</a></li>
+				</ul>
+			</div>
 		</div>
+		<!--资讯动态 start-->
 	</div>
 <!--以下公共-->
 	<!--footer start-->
