--- a/index.html
+++ b/index.html
@@ -169,10 +169,9 @@
 								<div class="media-body">
 									<h4 class="media-heading">手机</h4>
 									<p class="media-card-text">
-										手机手机手机手机手机手机手机手机手机
-										手机手机手机手机手机手机手机手机手机
+										代售各种品牌手机
 									</p>
-									<div class="text-right"><a href="javascript:;" class="btn btn-sm btn-info">更多</a>
+									<div class="text-right"><a class="btn btn-sm btn-info" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=503278576&idx=1&sn=40c3019339bb2c432c53c2cd9271daf4&scene=18#wechat_redirect" target="_blank">查看</a>
 									</div>
 								</div>
 							</div>
@@ -185,12 +184,11 @@
 									</a>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">手机</h4>
+									<h4 class="media-heading">电脑</h4>
 									<p class="media-card-text">
-										手机手机手机手机手机手机手机手机手机
-										手机手机手机手机手机手机手机手机手机
+										代售各种品牌电脑
 									</p>
-									<div class="text-right"><a href="#" class="btn btn-sm btn-info">更多</a>
+									<div class="text-right"><a class="btn btn-sm btn-info" href="#" target="_blank">查看</a>
 									</div>
 								</div>
 							</div>
@@ -203,12 +201,28 @@
 									</a>
 								</div>
 								<div class="media-body">
-									<h4 class="media-heading">手机</h4>
+									<h4 class="media-heading">主题</h4>
 									<p class="media-card-text">
-										手机手机手机手机手机手机手机手机手机
-										手机手机手机手机手机手机手机手机手机
+										定制PC桌面主题
 									</p>
-									<div class="text-right"><a href="#" class="btn btn-sm btn-info">更多</a>
+									<div class="text-right"><a class="btn btn-sm btn-info" href="#" target="_blank">查看</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-4 col-sm-6 col-xs-12">
+							<div class="media media-card">
+								<div class="media-left media-middle">
+									<a href="#">
+										<img src="img/versions-list01.png" width="128" alt="" data-no-retina="" data-wow-offset="15" data-wow-duration=".5s" class="wow zoomIn animated img-responsive version-pic">
+									</a>
+								</div>
+								<div class="media-body">
+									<h4 class="media-heading">维修</h4>
+									<p class="media-card-text">
+										提供电子产品维修
+									</p>
+									<div class="text-right"><a class="btn btn-sm btn-info" href="#" target="_blank">查看</a>
 									</div>
 								</div>
 							</div>
@@ -262,7 +276,7 @@
 									</li>
 									<!--更多-->
 									<li class="col-lg-4 col-sm-6 col-xs-12 float-r">
-										<a class="btn btn-boder btn-simple btn-xs btn-info a-more" href="#">更多</a>
+										<a class="btn btn-boder btn-simple btn-xs btn-info a-more" href="article-list.html">更多</a>
 									</li>
 								</ul>
 							</div>
