文章详细页

--- a/article-info.html
+++ b/article-info.html
@@ -74,36 +74,17 @@
 		<!--资讯动态 start-->
 		<div class="section section-basic">
 			<div class="container">
-				<div class="title">
-						<h3>资讯动态</h3>
+				<div class="title-center">
+					<h4>资讯动态</h4>
+					<div class="well well-sm clearfix">
+						<label class="col-sm-3 col-xs-10 col-sm-offset-2">发布时间：2016-10-19</label>
+						<label class="col-sm-3 col-xs-10">来源：雪景科技</label>
+						<label class="col-sm-3 col-xs-10">作者：未知</label>
+					</div>
 				</div>
 				<!-- START APP SHOTS-->
 				<section class="versions">
-					<ul class="list-group">
-						<li class="list-group-item">
-								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
-						</li>
-						<li class="list-group-item">
-								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
-						</li>
-						<li class="list-group-item">
-								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
-						</li>
-						<li class="list-group-item">
-								<a class="word overflow" target="_blank" href="http://mp.weixin.qq.com/s?__biz=MzAwOTg3NjE2MQ==&mid=2650762708&idx=1&sn=0806a626b500d396ced089333b40bed4&scene=0#wechat_redirect">你了解线程和进程吗</a>
-						</li>
-					</ul>
-					<ul class="pagination pagination-info">
-						<li><a href="javascript:void(0);">首页</a></li>
-						<li><a href="javascript:void(0);">&lt;</a></li>
-						<li><a href="javascript:void(0);">1</a></li>
-						<li><a href="javascript:void(0);">2</a></li>
-						<li class="active"><a href="javascript:void(0);">3</a></li>
-						<li><a href="javascript:void(0);">4</a></li>
-						<li><a href="javascript:void(0);">5</a></li>
-						<li><a href="javascript:void(0);">&gt;</a></li>
-						<li><a href="javascript:void(0);">尾页</a></li>
-					</ul>
+					富文本编辑器
 				</section>
 				<!-- END APP SHOTS-->
 			</div>
