--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 	<!-- Bootstrap -->
 	<link href="libs/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="libs/css/animate.css">
 	<link href="css/common.css" rel="stylesheet">
 	<link href="css/index.css" rel="stylesheet">
 
@@ -335,7 +336,7 @@
 						<!-- end map-->
 						<div class="col-md-4">
 							<!-- SECTION TITLE-->
-							<h3>联系我们</h3>
+							<h4>联系我们</h4>
 							<!-- FEATURE LIST-->
 							<ul class="featured-list">
 								<li>
@@ -349,7 +350,7 @@
 								</li>
 							</ul>
 							<!-- SECTION TITLE-->
-							<h3>关注我们</h3>
+							<h4>关注我们</h4>
 							<!-- FEATURE LIST-->
 							<ul class="featured-list">
 								<li>
