--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="col-md-6">
 							<!-- SECTION TITLE-->
 							<h4>雪花电池
-								<a class="btn btn-boder btn-simple btn-xs btn-info float-r" href="#">更多</a>
+								<a class="btn btn-boder btn-simple btn-xs btn-info float-r" href="#" target="_blank">更多</a>
 							</h4>
 							<p class="text-p">
 								雪花电池雪花电池雪花电池雪花电池雪花电池
@@ -277,7 +277,7 @@
 									</li>
 									<!--更多-->
 									<li class="col-lg-4 col-sm-6 col-xs-12 float-r">
-										<a class="btn btn-boder btn-simple btn-xs btn-info a-more" href="article-list.html">更多</a>
+										<a class="btn btn-boder btn-simple btn-xs btn-info a-more" href="article-list.html" target="_blank">更多</a>
 									</li>
 								</ul>
 							</div>
