--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 					<div class="header header-info">
 						<div class="nav-tabs-navigation">
 							<div class="nav-tabs-wrapper">
-								<ul class="nav nav-tabs" data-tabs="tabs">
+								<ul class="nav nav-tabs clearfix" data-tabs="tabs">
 									<li class="active">
 										<a href="#information" data-toggle="tab">
 											资讯动态
