首页调整更多按钮

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 						<div class="col-md-6">
 							<!-- SECTION TITLE-->
 							<h5>雪花电池
-								<a class="btn btn-boder btn-simple btn-xs btn-info float-r" href="#" target="_blank">更多</a>
+								<a class="btn btn-boder btn-simple btn-xs btn-info a-more" href="#" target="_blank">更多</a>
 							</h5>
 							<p class="text-p">
 								雪花电池雪花电池雪花电池雪花电池雪花电池
